# maestro-challenge

./: .gitignore  Cargo.toml  README.md
core/: README.md
core/proto_build/: Cargo.toml
core/proto_build/src/: lib.rs
eclipse-ankaios/resource_statistics/: Cargo.toml  README.md
eclipse-ankaios/resource_statistics/.devcontainer/: Dockerfile  devcontainer.json
eclipse-ankaios/resource_statistics/src/: commands.rs  main.rs  resource_statistic_job.rs  routes.rs
in-vehicle-stack/: Cargo.toml  README.md  build_wheelchair_assistant_container.sh  cloud-connection.md  config-overrides.md
in-vehicle-stack/proto_build/: build.rs
in-vehicle-stack/python_provider/.devcontainer/: Dockerfile  devcontainer.json
in-vehicle-stack/python_provider/src/: main.py
in-vehicle-stack/sample_trailer_connected_provider/: README.md
in-vehicle-stack/sample_trailer_connected_provider/.devcontainer/: Dockerfile  devcontainer.json
in-vehicle-stack/sample_trailer_connected_provider/src/: main.py
in-vehicle-stack/scenarios/intelligent_orchestrator_use_case/ankaios_resource_statistics_app/: README.md
in-vehicle-stack/scenarios/intelligent_orchestrator_use_case/ankaios_resource_statistics_app/.devcontainer/: Dockerfile
in-vehicle-stack/scenarios/smart_trailer_use_case/applications/smart_trailer_application/: Cargo.toml
in-vehicle-stack/scenarios/smart_trailer_use_case/applications/smart_trailer_application/src/: main.rs
in-vehicle-stack/scenarios/smart_trailer_use_case/digital_twin_providers/common/src/: utils.rs
in-vehicle-stack/scenarios/smart_trailer_use_case/digital_twin_providers/python_provider/: Dockerfile
in-vehicle-stack/scenarios/smart_trailer_use_case/digital_twin_providers/python_provider/.devcontainer/: devcontainer.json
in-vehicle-stack/scenarios/smart_trailer_use_case/digital_twin_providers/trailer_connected_provider/: Dockerfile
in-vehicle-stack/scenarios/smart_trailer_use_case/digital_twin_providers/trailer_connected_provider/src/: trailer_connected_provider_impl.rs
in-vehicle-stack/scenarios/smart_trailer_use_case/digital_twin_providers/trailer_properties_provider/: Cargo.toml  Dockerfile
in-vehicle-stack/scenarios/smart_trailer_use_case/scripts/: start_trailer_applications_ankaios.sh  start_trailer_applications_bluechi.sh
in-vehicle-stack/scenarios/wheelchair_assistant_use_case/applications/smart_trailer_application/: Dockerfile
in-vehicle-stack/scenarios/wheelchair_assistant_use_case/applications/smart_trailer_application/src/: main.rs
in-vehicle-stack/scenarios/wheelchair_assistant_use_case/applications/wheelchair_assistant_application/: Cargo.toml  Dockerfile
in-vehicle-stack/scenarios/wheelchair_assistant_use_case/applications/wheelchair_assistant_application_demo_gui/: wheelchair_assistant_demo.py
in-vehicle-stack/scenarios/wheelchair_assistant_use_case/applications/wheelchair_distance_application/: Cargo.toml  Dockerfile
in-vehicle-stack/scenarios/wheelchair_assistant_use_case/digital-twin-model/: Cargo.toml
in-vehicle-stack/scenarios/wheelchair_assistant_use_case/digital-twin-model/dtdl/: car.json  trailer.json
in-vehicle-stack/scenarios/wheelchair_assistant_use_case/digital-twin-model/src/: car_v1.rs  lib.rs
in-vehicle-stack/scenarios/wheelchair_assistant_use_case/digital_twin_providers/car_off_provider/: Cargo.toml  Dockerfile
in-vehicle-stack/scenarios/wheelchair_assistant_use_case/digital_twin_providers/car_on_provider/: Cargo.toml  Dockerfile
in-vehicle-stack/scenarios/wheelchair_assistant_use_case/digital_twin_providers/carkey_lock_provider/: Cargo.toml  Dockerfile
in-vehicle-stack/scenarios/wheelchair_assistant_use_case/digital_twin_providers/carkey_lock_unlock_provider/: Cargo.toml  Dockerfile
in-vehicle-stack/scenarios/wheelchair_assistant_use_case/digital_twin_providers/carkey_unlock_provider/: Cargo.toml  Dockerfile
in-vehicle-stack/scenarios/wheelchair_assistant_use_case/digital_twin_providers/common/: Cargo.toml
in-vehicle-stack/scenarios/wheelchair_assistant_use_case/digital_twin_providers/trailer_connected_provider/: Cargo.toml  Dockerfile
in-vehicle-stack/scenarios/wheelchair_assistant_use_case/digital_twin_providers/trailer_properties_provider/: Dockerfile
in-vehicle-stack/scenarios/wheelchair_assistant_use_case/digital_twin_providers/wheelchair_distance_decreasing_provider/: Cargo.toml  Dockerfile
in-vehicle-stack/scenarios/wheelchair_assistant_use_case/digital_twin_providers/wheelchair_distance_increasing_provider/: Cargo.toml  Dockerfile
in-vehicle-stack/scenarios/wheelchair_assistant_use_case/interfaces/: digital_twin_get_provider.proto
in-vehicle-stack/scenarios/wheelchair_assistant_use_case/proto_build/: Cargo.toml  build.rs
in-vehicle-stack/scenarios/wheelchair_assistant_use_case/proto_build/src/: lib.rs
in-vehicle-stack/scenarios/wheelchair_assistant_use_case/scripts/: start_wheelchair_assistant_provider_ankaios.sh
scenarios/smart_trailer_use_case/: Cargo.toml
scenarios/smart_trailer_use_case/applications/smart_trailer_application/: Cargo.toml
scenarios/smart_trailer_use_case/applications/smart_trailer_application/src/: main.rs
scenarios/smart_trailer_use_case/digital-twin-model/dtdl/: trailer.json
scenarios/smart_trailer_use_case/digital-twin-model/src/: trailer_v1.rs
scenarios/smart_trailer_use_case/digital_twin_providers/common/: Cargo.toml
scenarios/smart_trailer_use_case/digital_twin_providers/common/src/: constants.rs
scenarios/smart_trailer_use_case/digital_twin_providers/trailer_connected_provider/: Cargo.toml  Dockerfile
scenarios/smart_trailer_use_case/digital_twin_providers/trailer_connected_provider/src/: main.rs
scenarios/smart_trailer_use_case/digital_twin_providers/trailer_properties_provider/: Cargo.toml  Dockerfile
scenarios/smart_trailer_use_case/digital_twin_providers/trailer_properties_provider/src/: main.rs
scenarios/smart_trailer_use_case/scripts/: start_trailer_applications.sh  start_trailer_applications_ankaios.sh
smart_trailer_use_case/digital-twin-model/: Cargo.toml
smart_trailer_use_case/digital-twin-model/src/: trailer_v1.rs
(+60 files in other folders)
