# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
# SPDX-License-Identifier: MIT

[workspace]

members = [
  # core
  "core/proto_build",

  # smart_trailer_use_case
  "smart_trailer_use_case/digital_twin_providers/trailer_connected_provider",
  "smart_trailer_use_case/proto_build",
]

[workspace.dependencies]
env_logger= "0.10.0"
log = "0.4.20"
prost = "0.12.1"
serde = "1.0.190"
serde_derive = "1.0.163"
serde_json = "^1.0"
tokio = "1.29.1"
tonic = "0.10.2"
tonic-build = "0.10.2"
