[package]
name = "resource_statistics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
actix-web = "4.4.0"
tokio = { version = "1.24.2", features = ["sync", "io-util", "rt-multi-thread", "macros"] }
tokio-util = "0.7.4"
tokio-stream = "0.1.1"
async-process = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10"
log = "0.4"
lazy_static = "1.4.0"
