# Copyright (c) Microsoft Corporation.
# Licensed under the MIT license.
# SPDX-License-Identifier: MIT

[package]
name = "digital-twin-model"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
serde = "1.0.160"
serde_derive = "1.0.163"

[lib]
path = "src/lib.rs"
crate-type = ["lib"]