[package]
name = "wheelchair_distance_application"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
wheelchair_digital_twin_model = { path = "../../digital-twin-model" }
wheelchair_digital_twin_providers_common = { path = "../../digital_twin_providers/common" }
env_logger= { workspace = true }
log = { workspace = true }
interfaces = { path = "../../../../proto_build"}
paho-mqtt = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tonic = { workspace = true }
uuid = { workspace = true, features = ["v4", "fast-rng", "macro-diagnostics"] }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }