[package]
name = "car_off_provider"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
wheelchair_digital_twin_model= { path = "../../digital-twin-model" }
wheelchair_digital_twin_providers_common = { path = "../common" }
env_logger = { workspace = true }
interfaces = { path = "../../../../proto_build"}
log = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
wheelchair_assistant_interfaces = { path = "../../proto_build" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tonic = { workspace = true }
